--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,7 +5,7 @@
 }
 
 .Login form {
-  margin: 150px 500px;
+  margin: 150px 500px 0 500px;
   border: 2px solid lightgray;
   border-radius: 8px;
 }
@@ -17,7 +17,6 @@
 .form-label {
   margin-right: 250px;
   margin-bottom: 20px;
-  /* color: red; */
 }
 .form-control {
   padding: 8px;
