--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,4 @@
-.Login {
+/* .Login {
   margin: 0;
   padding: auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -31,4 +31,4 @@
   background-color: #007bff;
   border-radius: 10px;
   margin-bottom: 30px;
-}
+} */
